tui: add lipgloss styling with styles/widgets packages (MO-008)
- Add styles/theme.go with DefaultTheme() and color palette
- Add styles/icons.go with Unicode status icons (✓/✗/▶/○/⚠/ℹ)
- Add widgets/box.go for bordered containers
- Add widgets/header.go for styled title bar with status/uptime
- Add widgets/footer.go for keybindings bar
- Add widgets/table.go for services table with selection
- Refactor DashboardModel.View() to use styled widgets
- Refactor RootModel.View() with header/footer/help overlay
- Add MO-008 ticket with analysis doc and diary

--- a/ttmp/vocabulary.yaml
+++ b/ttmp/vocabulary.yaml
@@ -33,6 +33,8 @@ topics:
       description: Chat backend and frontend surfaces
     - slug: websocket
       description: WebSocket lifecycle & events
+    - slug: tui
+      description: Terminal user interface (TUI) components and styling
 docTypes:
     - slug: index
       description: Ticket index document
