:art: Fix goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,5 @@
 version: 2
-project_name: XXX
+project_name: devctl
 
 before:
   hooks:
@@ -10,8 +10,8 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
-    main: ./cmd/XXX
-    binary: XXX
+    main: ./cmd/devctl
+    binary: devctl
     goos:
       - linux
 # I am not able to test windows at the time
@@ -37,9 +37,9 @@ signs:
     args: [ "--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}" ]
 
 brews:
-  - name: XXX
-    description: "XXX is a tool"
-    homepage: "https://github.com/go-go-golems/XXX"
+  - name: devctl
+    description: "devctl is a tool"
+    homepage: "https://github.com/go-go-golems/devctl"
     repository:
       owner: go-go-golems
       name: homebrew-go-go-go
@@ -54,7 +54,7 @@ nfpms:
     maintainer: Manuel Odendahl <wesen@ruinwesen.com>
 
     description: |-
-      XXX is a tool
+      devctl is a tool
 
     license: MIT
 
